hermes/tests/fixtures/is_valid_verification/expected.stderr
[External Error] generated/IsValidVerificationIsValidVerification<HASH>/IsValidVerificationIsValidVerification<HASH>.lean: could not synthesize default value for field 'h_ret_is_valid' of 'is_valid_verification.make_valid.Post' using tactics
[External Error] generated/IsValidVerificationIsValidVerification<HASH>/IsValidVerificationIsValidVerification<HASH>.lean: This error comes from the implicit `simp_all` proof for `h_ret_is_valid`. Lean cannot automatically prove that this value satisfies the `isValid` type invariant. Consider providing a manual proof via `proof (h_ret_is_valid)`.
  × Expected type must not contain free variables
  │   ↑0 < ↑ret.x
  │ 
  │ Hint: Use the `+revert` option to automatically clean up and revert free
  │ variables
    ╭─[[PROJECT_ROOT]/src/lib.rs:15:50]
 14 │ /// proof:
 15 │ ///   simp [make_valid, Hermes.IsValid.isValid]; decide
    ·                                                  ───┬──
    ·                                                     ╰── here
 16 │ /// ```
    ╰────

  ⚠ This simp argument is unused:
  │   make_valid
  │ 
  │ Hint: Omit it from the simp argument list.
  │   simp [m̵a̵k̵e̵_̵v̵a̵l̵i̵d̵,̵ ̵Hermes.IsValid.isValid]
  │ 
  │ Note: This linter can be disabled with `set_option linter.unusedSimpArgs
  │ false`
    ╭─[[PROJECT_ROOT]/src/lib.rs:15:13]
 14 │ /// proof:
 15 │ ///   simp [make_valid, Hermes.IsValid.isValid]; decide
    ·             ─────┬────
    ·                  ╰── here
 16 │ /// ```
    ╰────

  ⚠ This simp argument is unused:
  │   Hermes.IsValid.isValid
  │ 
  │ Hint: Omit it from the simp argument list.
  │   simp [make_valid,̵ ̵H̵e̵r̵m̵e̵s̵.̵I̵s̵V̵a̵l̵i̵d̵.̵i̵s̵V̵a̵l̵i̵d̵]
  │ 
  │ Note: This linter can be disabled with `set_option linter.unusedSimpArgs
  │ false`
    ╭─[[PROJECT_ROOT]/src/lib.rs:15:25]
 14 │ /// proof:
 15 │ ///   simp [make_valid, Hermes.IsValid.isValid]; decide
    ·                         ───────────┬──────────
    ·                                    ╰── here
 16 │ /// ```
    ╰────

[External Error] generated/IsValidVerificationIsValidVerification<HASH>/IsValidVerificationIsValidVerification<HASH>.lean: could not synthesize default value for field 'h_ret_is_valid' of 'is_valid_verification.make_bad.Post' using tactics
[External Error] generated/IsValidVerificationIsValidVerification<HASH>/IsValidVerificationIsValidVerification<HASH>.lean: This error comes from the implicit `simp_all` proof for `h_ret_is_valid`. Lean cannot automatically prove that this value satisfies the `isValid` type invariant. Consider providing a manual proof via `proof (h_ret_is_valid)`.
  × Expected type must not contain free variables
  │   ↑0 < ↑ret.x
  │ 
  │ Hint: Use the `+revert` option to automatically clean up and revert free
  │ variables
    ╭─[[PROJECT_ROOT]/src/lib.rs:28:48]
 27 │ /// proof:
 28 │ ///   simp [make_bad, Hermes.IsValid.isValid]; decide
    ·                                                ───┬──
    ·                                                   ╰── here
 29 │ /// ```
    ╰────

  ⚠ This simp argument is unused:
  │   make_bad
  │ 
  │ Hint: Omit it from the simp argument list.
  │   simp [m̵a̵k̵e̵_̵b̵a̵d̵,̵ ̵Hermes.IsValid.isValid]
  │ 
  │ Note: This linter can be disabled with `set_option linter.unusedSimpArgs
  │ false`
    ╭─[[PROJECT_ROOT]/src/lib.rs:28:13]
 27 │ /// proof:
 28 │ ///   simp [make_bad, Hermes.IsValid.isValid]; decide
    ·             ────┬───
    ·                 ╰── here
 29 │ /// ```
    ╰────

  ⚠ This simp argument is unused:
  │   Hermes.IsValid.isValid
  │ 
  │ Hint: Omit it from the simp argument list.
  │   simp [make_bad,̵ ̵H̵e̵r̵m̵e̵s̵.̵I̵s̵V̵a̵l̵i̵d̵.̵i̵s̵V̵a̵l̵i̵d̵]
  │ 
  │ Note: This linter can be disabled with `set_option linter.unusedSimpArgs
  │ false`
    ╭─[[PROJECT_ROOT]/src/lib.rs:28:23]
 27 │ /// proof:
 28 │ ///   simp [make_bad, Hermes.IsValid.isValid]; decide
    ·                       ───────────┬──────────
    ·                                  ╰── here
 29 │ /// ```
    ╰────

Error: Lean verification failed. Consider running `cargo hermes generate`, iterating on generated `.lean` files, and copying results back to `.rs` files.
